--- a/scripts/generate_testdata_dates.ipynb
+++ b/scripts/generate_testdata_dates.ipynb
@@ -4,9 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Update test_data dates to today\\n",
+        "# Update test_data dates to the next full workweek\\n",
         "\\n",
-        "This cell replaces placeholder dates (xx/yy/zz) or existing dates in the CSVs with today and the next two days, then writes `*_today.csv` files."
+        "This cell replaces placeholder dates (xx/yy/zz) or base dates (e.g. 01.01.1970) in the CSVs with the next Monday plus four days (Mon-Fri), then writes `*_today.csv` files."
       ]
     },
     {
@@ -40,27 +40,37 @@
         "                    values.extend(DATE_TOKEN_RE.findall(value))\n",
         "    return [value for value in values if value not in PLACEHOLDER_OFFSETS]\n",
         "\n",
-        "def build_date_mapping(unique_dates: list[str], days: int = 3) -> dict[str, str]:\n",
+        "def next_weekday(start: dt.date, weekday: int) -> dt.date:\n",
+        "    days_ahead = (weekday - start.weekday()) % 7\n",
+        "    if days_ahead == 0:\n",
+        "        return start\n",
+        "    return start + dt.timedelta(days=days_ahead)\n",
+        "\n",
+        "def get_start_date(anchor: dt.date | None = None) -> dt.date:\n",
+        "    base = anchor or dt.date.today()\n",
+        "    return next_weekday(base, 0)  # 0 = Monday\n",
+        "\n",
+        "def build_date_mapping(unique_dates: list[str], days: int = 5) -> tuple[dict[str, str], dt.date]:\n",
         "    if len(unique_dates) > days:\n",
         "        raise ValueError(f\"Found {len(unique_dates)} unique dates but only {days} days were provided.\")\n",
-        "    today = dt.date.today()\n",
+        "    start_date = get_start_date()\n",
         "    return {\n",
-        "        date_str: (today + dt.timedelta(days=index)).strftime(\"%d.%m.%Y\")\n",
+        "        date_str: (start_date + dt.timedelta(days=index)).strftime(\"%d.%m.%Y\")\n",
         "        for index, date_str in enumerate(unique_dates)\n",
-        "    }\n",
+        "    }, start_date\n",
         "\n",
-        "def replace_dates(value: str, date_mapping: dict[str, str]) -> str:\n",
+        "def replace_dates(value: str, date_mapping: dict[str, str], start_date: dt.date) -> str:\n",
         "    def replacer(match: re.Match[str]) -> str:\n",
         "        token = match.group(0)\n",
         "        if token in PLACEHOLDER_OFFSETS:\n",
         "            offset = PLACEHOLDER_OFFSETS[token]\n",
-        "            target = dt.date.today() + dt.timedelta(days=offset)\n",
+        "            target = start_date + dt.timedelta(days=offset)\n",
         "            return target.strftime(\"%d.%m.%Y\")\n",
         "        return date_mapping.get(token, token)\n",
         "\n",
         "    return DATE_TOKEN_RE.sub(replacer, value)\n",
         "\n",
-        "def update_csv(input_path: Path, suffix: str = \"_today\", days: int = 3) -> Path:\n",
+        "def update_csv(input_path: Path, suffix: str = \"_today\", days: int = 5) -> Path:\n",
         "    with input_path.open(\"r\", newline=\"\", encoding=\"utf-8\") as handle:\n",
         "        reader = csv.DictReader(handle)\n",
         "        if reader.fieldnames is None:\n",
@@ -69,10 +79,10 @@
         "        rows = list(reader)\n",
         "\n",
         "    unique_dates = sorted({date for date in extract_dates(rows, fieldnames)}, key=parse_date)\n",
-        "    date_mapping = build_date_mapping(unique_dates, days=days)\n",
+        "    date_mapping, start_date = build_date_mapping(unique_dates, days=days)\n",
         "\n",
         "    updated_rows = [\n",
-        "        {key: replace_dates(value, date_mapping) if value else value for key, value in row.items()}\n",
+        "        {key: replace_dates(value, date_mapping, start_date) if value else value for key, value in row.items()}\n",
         "        for row in rows\n",
         "    ]\n",
         "\n",
@@ -87,6 +97,7 @@
         "    Path(\"test_data/medweb_test_multiday.csv\"),\n",
         "    Path(\"test_data/medweb_test_multiday_v2.csv\"),\n",
         "    Path(\"test_data/medweb_test_multiday_v3.csv\"),\n",
+        "    Path(\"test_data/medweb_test_multiday_v4.csv\"),\n",
         "]\n",
         "\n",
         "for csv_path in csv_files:\n",
